# coronet

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: fileStore.svelte.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/main_editor/: +layout.svelte  +page.svelte
src/routes/main_editor/manifest_editing/: +page.svelte
