cargo-features = ["codegen-backend", "profile-rustflags"]

[package]
name = "coronet"
version = "0.1.0"
description = "Coronet"
authors = ["luckybelcik"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "coronet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
engine_core = { git = "https://github.com/luckybelcik/kingdoms-game.git", package = "engine_core" }
engine_assets = { git = "https://github.com/luckybelcik/kingdoms-game.git", package = "engine_assets" }
rustc-hash = "2.1.1"
image = "0.25.9"
toml = "1.0.2"
rayon = "1.11.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
directories = "6.0.0"
nalgebra-glm = { version = "0.20.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }

[profile.dev]
strip = "debuginfo"
rustflags = ["-Z", "threads=8", "-C", "link-arg=-no-pie"]
codegen-units = 512
incremental = true
opt-level = 0
codegen-backend = "cranelift"
